packages/components/src/components/custom-select/custom-select.scss
@use "@db-ux/core-foundations/build/styles/variables";
@use "@db-ux/core-foundations/build/styles/colors";
@use "@db-ux/core-foundations/build/styles/helpers";
@use "@db-ux/core-foundations/build/styles/screen-sizes";
@use "../../styles/internal/form-components";
@use "../../styles/internal/component";
@use "../../styles/internal/select-components";
@use "../../styles/dialog-init";

.db-custom-select {
	--db-form-component-padding-inline-end: calc(
		#{select-components.$select-icon-padding} + #{variables.$db-sizing-sm} +
			#{variables.$db-spacing-fixed-sm}
	);
	--db-form-component-padding-inline-start: calc(
		#{select-components.$has-before-padding} +
			#{variables.$db-spacing-fixed-xs}
	);
	--db-form-component-min-inline-size: #{variables.$db-sizing-xl};

	@extend %select-icon;
	@extend %select-placeholder;

	position: relative;

	&[data-icon]:not([data-show-icon="false"]) {
		--db-form-component-min-inline-size: #{variables.$db-sizing-2xl};
	}

	&:not([data-width]),
	&[data-width="full"] {
		&,
		.db-custom-select-form-field {
			inline-size: 100%;
		}
	}

	&[data-hide-label="true"] {
		--db-label-visible-height: 0;
		--db-label-visible-spacing: 1;
	}

	@include form-components.set-default-form-component(summary);

	[id$="-placeholder"] {
		--db-form-component-padding-inline-end: #{select-components.$select-icon-padding};

		margin-inline-end: calc(
			#{form-components.$font-size-height} +
				#{variables.$db-spacing-fixed-sm}
		);
	}

	&:has(summary span) {
		[id$="-placeholder"] {
			display: none;
		}
	}

	/* custom elements workaround */
	> db-button > .db-button[data-icon="cross"][data-variant="ghost"],
	> .db-button[data-icon="cross"][data-variant="ghost"] {
		--db-tooltip-parent-position: absolute;

		inset-block-start: form-components.$icon-inline-block-start;
		transform: translateY(-50%);

		/* padding form field + gap + icon size */
		inset-inline-end: calc(
			#{select-components.$select-icon-padding} +
				#{variables.$db-spacing-fixed-xs}
		);

		@include helpers.divider("right", "after");

		&::after {
			position: absolute;
			inset-inline-end: calc(
				-1 * #{variables.$db-spacing-fixed-xs} -
					#{variables.$db-border-width-3xs}
			);
		}
	}

	.db-tooltip {
		@extend %db-neutral-variables;
	}

	&[data-selected-type="tag"] {
		.db-custom-select-form-field {
			&:has(:not(div:empty)) {
				padding-block: variables.$db-spacing-fixed-xs;
				block-size: auto;

				> div {
					flex-wrap: wrap;
				}
			}

			> button {
				align-self: start;
			}
		}
	}

	> details[open] {
		> summary {
			@include screen-sizes.screen("sm", "max") {
				&::before {
					position: fixed;
					z-index: 9998;
					inset: 0;
					content: "";
					cursor: default;
					background-color: dialog-init.$backdrop-color-strong;
					opacity: variables.$db-opacity-lg;
				}
			}
		}
	}

	&[data-variant="floating"] {
		.db-custom-select-form-field {
			> span {
				/* stylelint-disable-next-line db-ux/use-spacings */
				padding-block-start: form-components.$floating-label-padding-block-start;
			}
		}
	}
}

